--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,6 @@ dependencies = [
 ]
 
 [tool.uv.sources]
-audiomessages = { path = "../proto-packages/packages/audiomessages", editable = true }
-audiocloneserver = { path = "../proto-packages/packages/audiocloneserver", editable = true }
-vibevoice = { url = "git+https://github.com/microsoft/VibeVoice.git", editable = true }
+audiomessages = { path = "../packages/audiomessages", editable = true }
+audiocloneserver = { path = "../packages/audiocloneserver", editable = true }
+vibevoice = { git = "git+https://github.com/microsoft/VibeVoice.git" }
