--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "librosa>=0.10.0",
     "soundfile>=0.12.0",
     "numpy>=1.24.0",
+    "psutil>=5.8.0",
 ]
 
 [tool.uv.sources]
